2003-11-20  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: add Reconfig to clone ctor.
	* ResMgr.cc: allow 0x numbers.
	* ResMgr.h: use strtol.
	* SFtp.cc, SFtp.h: use new resources.
	* resource.cc: new sftp resources.

2003-11-19  Alexander V. Lukyanov <lav@yars.free.net>

	* PtyShell.cc, PtyShell.h: add pipe support, thus the ability to
	  separate data and interaction with ssh (passwords etc).
	* buffer.cc, buffer.h: pack/unpack - signed int, 64 bit, debugging.
	* FileSet.cc, FileSet.h: add longname.
	* NetAccess.cc, NetAccess.h, ftpclass.cc, ftpclass.h: move home_auto
	  to NetAccess.
	* SFtp.cc, SFtp.h: more work; ls works.
	* Makefile.am: libpty; add sftp.

2003-11-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: drop size/date if read pos>size.
	* FileCopy.h: (GetDescriptionForLog) new method.
	* commands.cc: add --sort=time for cls; add long options for open;
	  optional verification of cached dirs.
	* CmdExec.cc, CmdExec.h: optional verification of cached dirs.
	* Resolver.cc: define C_IN if undefined.
	* buffer.cc, buffer.h: pack/unpack methods added.

2003-11-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h, resource.cc: new setting ftp:ssl-protect-list
	  to selectively protect listings; propagate pret_supported; set
	  real_pos to 0 always if REST fails.

2003-10-21  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: handle long options in open command.

2003-10-03  Alexander V. Lukyanov <lav@yars.free.net>

	* SignalHook.cc: unblock signals upon restoring.
	* StatusLine.cc: (update) support multibyte characters.
	* Speedometer.cc: (GetETAStrFromTime) support multibyte characters.
	* misc.cc: (squeeze_file_name) support multibyte characters.
	* ftpclass.cc, ftpclass.h, resources.cc: add use_pret and
	  pret_supported flags, ftp:use-pret setting.
	* pgetJob.cc: make more room for status, less for file name.

2003-10-02  Morgan Christiansson <lftp@mog.se>
