@@ -413,6 +413,20 @@ public:
 
 #include "buffer.h"
 
+class LsOptions
+{
+public:
+   bool append_type:1;
+   bool multi_column:1;
+   bool show_all:1;
+   LsOptions()
+      {
+	 append_type=false;
+	 multi_column=false;
+	 show_all=false;
+      }
+};
+
 class DirList : public FileAccessOperation
 {
 protected:
