@@ -38,20 +38,6 @@ public:
 
 class ParsedURL;
 
-class LsOptions
-{
-public:
-   bool append_type:1;
-   bool multi_column:1;
-   bool show_all:1;
-   LsOptions()
-      {
-	 append_type=false;
-	 multi_column=false;
-	 show_all=false;
-      }
-};
-
 class HttpDirList : public DirList
 {
    FileAccess *session;
